Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48415

Qt fails to compile from source when using -qtnamespace (static build)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.0 RC
    • 5.6.0 Alpha
    • Build System
    • None
    • configure -prefix c:\qt\5.6\msvc2013_opengl_x86_static -commercial -debug-and-release -static -nomake examples -nomake tools -nomake tests -opengl desktop -skip multimedia -qtnamespace Imaginando
    • 6e1d9f9b96bf14213e74779f7611bad304b20ecd

    Description

      I have tried for the first time to use -qtnamespace option. I have configured qt with the command:

      configure -prefix c:\qt\5.6\msvc2013_opengl_x86_static -commercial -debug-and-release -static -nomake examples -nomake tools -nomake tests -opengl desktop -skip multimedia -qtnamespace Imaginando

      The building failed as show below:

      cl -c -nologo -Zc:wchar_t -FS -O2 -MD -Zc:strictStrings -D_HAS_EXCEPTIONS=0 -GR -W3 -w34100 -w34189 -w44996 -DUNICODE -DWIN32 -DQT_NO_EXCEPTIONS -DQT_NO_DEBUG -DQT_QMLTEST_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_TESTLIB_LIB -DQT_CORE_LIB -DQT_NAMESPACE=Imaginando
      -DQT_TESTCASE_BUILDDIR="\"C:/Qt/5.6/src/qtdeclarative/tools/qmltestrunner\"" -DNDEBUG -I. -I..\..\include -I..\..\include\QtQuickTest -IC:\Qt\5.6\src\qtbase\include -IC:\Qt\5.6\src\qtbase\include\QtWidgets -IC:\Qt\5.6\src\qtbase\include\QtGui -I..\..\include\QtQml -IC:\Qt\5.6\src\qtbase\include\QtN
      etwork -IC:\Qt\5.6\src\qtbase\include\QtTest -IC:\Qt\5.6\src\qtbase\include\QtCore -I.moc\release -IC:\Qt\5.6\src\qtbase\mkspecs\win32-msvc2013 -Fo.obj\release\ @C:\Users\nsantos\AppData\Local\Temp\qmltestrunner_plugin_import.obj.5812.0.jom
      qmltestrunner_plugin_import.cpp
      link /NOLOGO /DYNAMICBASE /NXCOMPAT /INCREMENTAL:NO /SUBSYSTEM:CONSOLE "/MANIFESTDEPENDENCY:type='win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' publicKeyToken='6595b64144ccf1df' language='' processorArchitecture=''" /MANIFEST:embed /OUT:..\..\bin\qmllint.exe @C:\Users\n
      santos\AppData\Local\Temp\qmllint.exe.3884.734.jom
      Creating library ..\..\bin\qmllint.lib and object ..\..\bin\qmllint.exp
      link /NOLOGO /DYNAMICBASE /NXCOMPAT /INCREMENTAL:NO /SUBSYSTEM:CONSOLE "/MANIFESTDEPENDENCY:type='win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' publicKeyToken='6595b64144ccf1df' language='' processorArchitecture=''" /MANIFEST:embed /OUT:..\..\bin\qmltestrunner.exe @C:\U
      sers\nsantos\AppData\Local\Temp\qmltestrunner.exe.5812.1016.jom
      link /NOLOGO /DYNAMICBASE /NXCOMPAT /INCREMENTAL:NO /SUBSYSTEM:CONSOLE "/MANIFESTDEPENDENCY:type='win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' publicKeyToken='6595b64144ccf1df' language='' processorArchitecture=''" /MANIFEST:embed /OUT:..\..\bin\qmlimportscanner.exe @C
      :\Users\nsantos\AppData\Local\Temp\qmlimportscanner.exe.1488.1375.jom
      Creating library ..\..\bin\qmlimportscanner.lib and object ..\..\bin\qmlimportscanner.exp
      Creating library ..\..\bin\qmltestrunner.lib and object ..\..\bin\qmltestrunner.exp
      qmldbg_server.lib(qqmldebugserver.obj) : error LNK2019: unresolved external symbol "struct Imaginando::QStaticPlugin const __cdecl Imaginando::qt_static_plugin_QTcpServerConnectionFactory(void)" (?qt_static_plugin_QTcpServerConnectionFactory@Imaginando@@YA?BUQStaticPlugin@1@XZ) referenced in functio
      n "public: __thiscall Imaginando::StaticQTcpServerConnectionFactoryPluginInstance::StaticQTcpServerConnectionFactoryPluginInstance(void)" (??0StaticQTcpServerConnectionFactoryPluginInstance@Imaginando@@QAE@XZ)
      qmldbg_server.lib(qqmldebugserver.obj) : error LNK2019: unresolved external symbol "struct Imaginando::QStaticPlugin const __cdecl Imaginando::qt_static_plugin_QLocalClientConnectionFactory(void)" (?qt_static_plugin_QLocalClientConnectionFactory@Imaginando@@YA?BUQStaticPlugin@1@XZ) referenced in fun
      ction "public: __thiscall Imaginando::StaticQLocalClientConnectionFactoryPluginInstance::StaticQLocalClientConnectionFactoryPluginInstance(void)" (??0StaticQLocalClientConnectionFactoryPluginInstance@Imaginando@@QAE@XZ)
      Qt5Qml.lib(qqmldebugconnector.obj) : error LNK2019: unresolved external symbol "struct Imaginando::QStaticPlugin const __cdecl Imaginando::qt_static_plugin_QQmlDebugServerFactory(void)" (?qt_static_plugin_QQmlDebugServerFactory@Imaginando@@YA?BUQStaticPlugin@1@XZ) referenced in function "public: __t
      hiscall Imaginando::StaticQQmlDebugServerFactoryPluginInstance::StaticQQmlDebugServerFactoryPluginInstance(void)" (??0StaticQQmlDebugServerFactoryPluginInstance@Imaginando@@QAE@XZ)
      Qt5Qml.lib(qqmldebugconnector.obj) : error LNK2019: unresolved external symbol "struct Imaginando::QStaticPlugin const __cdecl Imaginando::qt_static_plugin_QQmlInspectorServiceFactory(void)" (?qt_static_plugin_QQmlInspectorServiceFactory@Imaginando@@YA?BUQStaticPlugin@1@XZ) referenced in function "p
      ublic: __thiscall Imaginando::StaticQQmlInspectorServiceFactoryPluginInstance::StaticQQmlInspectorServiceFactoryPluginInstance(void)" (??0StaticQQmlInspectorServiceFactoryPluginInstance@Imaginando@@QAE@XZ)
      Qt5Qml.lib(qqmldebugconnector.obj) : error LNK2019: unresolved external symbol "struct Imaginando::QStaticPlugin const __cdecl Imaginando::qt_static_plugin_QQmlProfilerServiceFactory(void)" (?qt_static_plugin_QQmlProfilerServiceFactory@Imaginando@@YA?BUQStaticPlugin@1@XZ) referenced in function "pub
      lic: __thiscall Imaginando::StaticQQmlProfilerServiceFactoryPluginInstance::StaticQQmlProfilerServiceFactoryPluginInstance(void)" (??0StaticQQmlProfilerServiceFactoryPluginInstance@Imaginando@@QAE@XZ)
      Qt5Qml.lib(qqmldebugconnector.obj) : error LNK2019: unresolved external symbol "struct Imaginando::QStaticPlugin const __cdecl Imaginando::qt_static_plugin_QQmlDebuggerServiceFactory(void)" (?qt_static_plugin_QQmlDebuggerServiceFactory@Imaginando@@YA?BUQStaticPlugin@1@XZ) referenced in function "pub
      lic: __thiscall Imaginando::StaticQQmlDebuggerServiceFactoryPluginInstance::StaticQQmlDebuggerServiceFactoryPluginInstance(void)" (??0StaticQQmlDebuggerServiceFactoryPluginInstance@Imaginando@@QAE@XZ)
      ..\..\bin\qmltestrunner.exe : fatal error LNK1120: 6 unresolved externals
      jom: C:\Qt\5.6\src\qtdeclarative\tools\qmltestrunner\Makefile.Release [..\..\bin\qmltestrunner.exe] Error 1120
      jom: C:\Qt\5.6\src\qtdeclarative\tools\qmltestrunner\Makefile [release] Error 2
      jom: C:\Qt\5.6\src\qtdeclarative\tools\Makefile [sub-qmltestrunner-make_first] Error 2
      jom: C:\Qt\5.6\src\qtdeclarative\Makefile [sub-tools-make_first] Error 2
      jom: C:\Qt\5.6\src\Makefile [module-qtdeclarative-make_first] Error 2

      C:\Qt\5.6\src>

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            sinosoidal Nuno Santos
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes