QmlDebug: Don't duplicate Qt namespace when importing debug plugins

Q_IMPORT_PLUGIN already adds the Qt namespace to the symbols.

Task-number: QTBUG-48415
Change-Id: I25b4ffdcddd0bdd52bfd390964b9c1a333a79b30
Reviewed-by: hjk <hjk@theqtcompany.com>
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@theqtcompany.com>
Reviewed-by: Simon Hausmann <simon.hausmann@theqtcompany.com>